--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,8 +1,11 @@
 ---
-Category: '' # shoule be one of docker/pipeline/project/template/tool/training/users
-Description: '' # Description of why the repository exists
-Maintainers: ['someone@mednet.ucla.edu', 'someoneelse@mednet.ucla.edu'] # email address of maintainers
-Contributors: 'Xavier Hernandez' # Full names of contributors
-Languages: ['R', 'perl', 'nextflow'] # programming languages used
-Dependencies: 'BPG' # packages, tools that repo needs to run
-References: '' # is the tool/dependencies published, is there a confluence page
+Category: 'docker'
+Description: 'Dockerfile for Samtools'
+Maintainers: ['rhughwhite@mednet.ucla.edu'] # email address of maintainers
+Contributors: 'Rupert Hugh-White' # Full names of contributors
+Languages: ['Docker', 'shell script'] # programming languages used
+Tools: ['Samtools']
+Version: ['1.11']
+Purpose: 'A tool for reading/writing/editing/indexing/viewing SAM/BAM/CRAM format'
+Dependencies: ['docker'] # packages, tools that repo needs to run
+References: 'Li H et al. Bioinformatics 25, (2009)'
