--- a/metadata.yaml
+++ b/metadata.yaml
@@ -2,10 +2,9 @@
 Category: 'docker'
 Description: 'Docker repository for SAMtools'
 Maintainers: ['rhughwhite@mednet.ucla.edu']
-Contributors: ['Rupert Hugh-White', 'Helena Winata']
+Contributors: ['Rupert Hugh-White', 'Helena Winata', 'Arpi Beshlikyan']
 Languages: ['Docker', 'bash']
 Tools: ['SAMtools']
-Version: ['1.12']
+Version: ['1.14']
 Purpose: 'A tool for reading/writing/editing/indexing/viewing SAM/BAM/CRAM format'
-Dependencies: ['docker', 'conda', 'bl-base']
 References: 'Li H et al. Bioinformatics 25, (2009)'
