--- a/metadata.yaml
+++ b/metadata.yaml
@@ -2,9 +2,9 @@
 Category: 'docker'
 Description: 'Docker repository for SAMtools'
 Maintainers: ['rhughwhite@mednet.ucla.edu']
-Contributors: ['Rupert Hugh-White', 'Helena Winata', 'Arpi Beshlikyan']
+Contributors: ['Rupert Hugh-White', 'Helena Winata', 'Arpi Beshlikyan', 'Jaron Arbet']
 Languages: ['Dockerfile']
 Tools: ['SAMtools']
-Version: ['1.14']
+Version: ['1.15.1']
 Purpose: 'A tool for reading/writing/editing/indexing/viewing SAM/BAM/CRAM format'
 References: 'Li H et al. Bioinformatics 25, (2009)'
