--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,10 +1,11 @@
 ---
-Category: 'docker'
-Description: 'Docker repository for SAMtools'
-Maintainers: ['rhughwhite@mednet.ucla.edu']
-Contributors: ['Rupert Hugh-White', 'Helena Winata', 'Arpi Beshlikyan', 'Jaron Arbet', 'Sorel Fitz-Gibbon']
-Languages: ['Dockerfile']
-Tools: ['SAMtools']
-Version: ['1.16.1']
-Purpose: 'A tool for reading/writing/editing/indexing/viewing SAM/BAM/CRAM format'
-References: 'Li H et al. Bioinformatics 25, (2009)'
+category: 'docker'
+description: 'Docker repository for SAMtools'
+maintainers: ['rhughwhite@mednet.ucla.edu']
+contributors: ['Rupert Hugh-White', 'Helena Winata', 'Arpi Beshlikyan', 'Jaron Arbet', 'Sorel Fitz-Gibbon']
+languages: ['Dockerfile']
+tools: ['SAMtools']
+version: ['1.16.1']
+purpose: 'A tool for reading/writing/editing/indexing/viewing SAM/BAM/CRAM format'
+references: 'Li H et al. Bioinformatics 25, (2009)'
+image_name: 'samtools'
