trailing spaces fixed

--- a/.github/workflows/CICD-base.yaml
+++ b/.github/workflows/CICD-base.yaml
@@ -4,9 +4,11 @@ name: CICD-base
 on:
   push:
     branches:
+      - master
       - main
   pull_request:
     branches:
+      - master
       - main
 jobs:
   CICD-base:
